--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/jest": "^28.1.6",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
+    "rollup": "^2.77.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
 }
